main/static/style.css
/* normalize.css v8.0.1 */
html {
    line-height: 1.15;
    -webkit-text-size-adjust: 100%;
}

body {
    margin: 0;
}

main {
    display: block;
}

h1 {
    font-size: 2em;
    margin: 0.67em 0;
}

hr {
    box-sizing: content-box;
    height: 0;
    overflow: visible;
}

pre {
    font-family: monospace, monospace;
    font-size: 1em;
}

a {
    background-color: transparent;
}

abbr[title] {
    border-bottom: none;
    text-decoration: underline;
    text-decoration: underline dotted;
}

b,
strong {
    font-weight: bolder;
}

code,
kbd,
samp {
    font-family: monospace, monospace;
    font-size: 1em;
}

small {
    font-size: 80%;
}

sub,
sup {
    font-size: 75%;
    line-height: 0;
    position: relative;
    vertical-align: baseline;
}

sub {
    bottom: -0.25em;
}

sup {
    top: -0.5em;
}

img {
    border-style: none;
}

button,
input,
optgroup,
select,
textarea {
    font-family: inherit;
    font-size: 100%;
    line-height: 1.15;
    margin: 0;
}

button,
input {
    overflow: visible;
}

button,
select {
    text-transform: none;
}

button,
[type="button"],
[type="reset"],
[type="submit"] {
    -webkit-appearance: button;
}

button::-moz-focus-inner,
[type="button"]::-moz-focus-inner,
[type="reset"]::-moz-focus-inner,
[type="submit"]::-moz-focus-inner {
    border-style: none;
    padding: 0;
}

button:-moz-focusring,
[type="button"]:-moz-focusring,
[type="reset"]:-moz-focusring,
[type="submit"]:-moz-focusring {
    outline: 1px dotted ButtonText;
}

fieldset {
    padding: 0.35em 0.75em 0.625em;
}

legend {
    box-sizing: border-box;
    color: inherit;
    display: table;
    max-width: 100%;
    padding: 0;
    white-space: normal;
}

progress {
    vertical-align: baseline;
}

textarea {
    overflow: auto;
}

[type="checkbox"],
[type="radio"] {
    box-sizing: border-box;
    padding: 0;
}

[type="number"]::-webkit-inner-spin-button,
[type="number"]::-webkit-outer-spin-button {
    height: auto;
}

[type="search"] {
    -webkit-appearance: textfield;
    outline-offset: -2px;
}

[type="search"]::-webkit-search-decoration {
    -webkit-appearance: none;
}

::-webkit-file-upload-button {
    -webkit-appearance: button;
    font: inherit;
}

details {
    display: block;
}

summary {
    display: list-item;
}

template {
    display: none;
}

[hidden] {
    display: none;
}

/* general */
:root {
    --serif-font: 'EB Garamond', serif;
    --link-color: #1175e2;
    --ascent-color: #006cdf;
    --light-grey-color: #f2f2f2;
    --grey-1-color: #8d8d8d;
    --grey-2-color: #646464;
    --grey-3-color: #353535;
}

/* dark mode
 * create and/or override colors */
@media (prefers-color-scheme: dark) {
    :root {
        --dark-mode-color: #212529;
        --link-color: #3395ff;
        --light-grey-color: #484848;
        --grey-1-color: #bdbdbd;
        --grey-2-color: #888;
    }
}

html,
body {
    font-family: var(--serif-font);
    font-size: 20px;
    line-height: 1.5;
}
@media (prefers-color-scheme: dark) {
    body {
        color: #fff;
        background: var(--dark-mode-color);
    }
}

p {
    margin: 16px 0;
}

a {
    text-decoration: none;
    color: var(--link-color);
}

a:hover {
    text-decoration: underline;
}

h1 {
    font-size: 48px;
    font-weight: 400;
    margin: 32px 0 0;
}
@media (max-width: 640px) {
    h1 {
        font-size: 42px;
        line-height: 1.2;
    }
}

main {
    max-width: 640px;
    margin: 0 auto 64px;
}
@media (max-width: 640px) {
    main {
        padding: 0 8px;
    }
}

nav {
    text-align: center;
    margin-bottom: 64px;
}

article {
    margin-top: 32px;
}

aside {
    border: 3px dashed var(--grey-1-color);
    text-align: center;
    padding: 32px 0;
}

form {
    margin: 16px 0;
}

label {
    display: block;
    margin-top: 16px;
}

input[type="text"],
input[type="email"] {
    width: 100%;
    margin-bottom: 8px;
    box-sizing: border-box;
}
@media (prefers-color-scheme: dark) {
    input[type="text"],
    input[type="email"] {
        color: #fff;
        background: var(--grey-3-color);
        border: 2px solid var(--grey-2-color);
    }
}

input[type="submit"] {
    display: block;
    border: 0;
    padding: 6px 16px;
    cursor: pointer;
}

input[type="submit"]:hover {
    box-shadow: 8px 8px #000;
}

textarea {
    width: 100%;
    box-sizing: border-box;
}
@media (prefers-color-scheme: dark) {
    textarea {
        color: #fff;
        background: var(--grey-3-color);
        border: 2px solid var(--grey-2-color);
    }
}

time {
    color: var(--grey-1-color);
}

code {
    font-size: 16px;
    background: var(--light-grey-color);
}

pre {
    background: var(--light-grey-color);
    overflow: scroll;
}

blockquote {
    border-left: 12px solid var(--light-grey-color);
    padding-left: 16px;
    margin-left: 0;
}

.logo {
    width: 128px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 16px;
}

.logo a {
    opacity: 0.8;
}

.logo a:hover {
    opacity: 1;
}

.title {
    text-align: center;
    font-variant: small-caps;
    color: var(--grey-1-color);
}

.title:hover {
    text-decoration: none;
}

.title h1 {
    margin: 16px 0 0;
}

.title div {
    font-size: 48px;
    margin: 16px 0 0;
}

.subtitle {
    text-align: center;
    font-size: 24px;
    margin-bottom: 8px;
    color: var(--grey-2-color);
}

.subsubtitle {
    text-align: center;
    font-size: 20px;
    margin-bottom: 24px;
    color: var(--grey-1-color);
}

.events {
    list-style-type: none;
    padding-left: 0;
}

.events li {
    padding-top: 4px;
    padding-bottom: 4px;
}

.events li:nth-child(odd) {
    background: rgba(255, 0, 0, 0.075);
}

.events time {
    font-family: monospace;
    font-size: 16px;
    color: #000;
    background: transparent;
}

@media (max-width: 640px) {
    .post-date {
        margin-top: 16px;
    }
}

